--- a/UberEatsLike/Base.lproj/Main.storyboard
+++ b/UberEatsLike/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="180" id="efa-Dn-iQG"/>
                                 </constraints>
-                                <state key="normal" title="Button">
+                                <state key="normal" title="レストラン情報を取得">
                                     <color key="titleColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                 </state>
                                 <connections>
